# oqd-analog-emulator

./: .gitignore  README.md  mkdocs.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml  check_code_format.yml  pytest.yml
docs/: index.md  installation.md
docs/explanation/: qutip-simulation.md
docs/reference/: qutip_backend.md  qutip_compiler.md  task_backend.md
docs/stylesheets/: admonitions.css
docs/tutorials/: analog.md  ising.md  rabi-flopping.md
src/analog_emulator/: __init__.py  conversion.py  interface.py  passes.py  qutip_backend.py
src/analog_sim/: base.py  conversion.py  interface.py  passes.py
src/oqd_analog_emulator/: __init__.py  conversion.py  interface.py  passes.py  qutip_backend.py
tests/: test_qutip_backend.py
