[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oqd-analog-emulator"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache 2.0" }
keywords = ["quantum", "computing", "analog", "simulation", "emulation"]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Compilers",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


dependencies = [
  "pydantic>=2.4",
  "qutip==5.1.1",
  "oqd-compiler-infrastructure@git+https://github.com/openquantumdesign/oqd-compiler-infrastructure",
  "oqd-core@git+https://github.com/openquantumdesign/oqd-core",
]

[project.optional-dependencies]
docs = [
  "pymdown-extensions",
  "mkdocstrings",
  "mkdocs-material",
  "mkdocstrings-python",
  "mdx_truly_sane_lists"
]
test = [
  "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oqd_analog_emulator*"]


[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/oqd-analog-emulator"
Repository = "https://github.com/OpenQuantumDesign/oqd-analog-emulator.git"
Issues = "https://github.com/OpenQuantumDesign/oqd-analog-emulator/issues"
